# speech-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ontology.yaml  pyproject.toml  trains.yaml
data/processed/: utterances.parquet
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  audioPreprocessing.ts  confirmationLogic.ts  index.css  inference.ts  speechRules.ts  target_words.json  useModelSession.ts
model/: Makefile  pyproject.toml
model/docs/: assessment_words.md  autoresearch-results.md  autoresearch.md
model/scripts/: parse_cha.py  public-model.sh  quantise.py  release-model.sh  train.sh
model/src/speech_model/: config.py  dataset.py  decode.py  loss.py  metrics.py  model.py  train.py  wandb_utils.py
notebooks/: label_distribution.py
scripts/: README.md  acquire_data.py  acquire_speech_data.py  compute_embeddings.py  label_data.py  label_with_llm.py  process_data.py  quantise.py  segment_audio.py  train.sh
src/speech_model/: config.py  data_cleaning.py  dataset.py  decode.py  encoders.py  loss.py  metrics.py  model.py  splits.py  train.py  wandb_utils.py
tests/: test_config.py  test_data_cleaning.py
